# AIBattle-disabled-

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.Linux  Makefile.Win32  README.md
BattleShips/: CMakeLists.txt  GameUI.cpp  GameUI.h  Visualizer.cpp  sample.cpp  tester.cpp
Docs/: BattleShips.doc  Database.vsd  Influence.doc  Kamisado.docx  Maxit.docx  Tanks.docx  Tanks2.docx  XO.docx  XO4.docx
Docs/TowerDefense/: Tower Defense.tex  lkshTemplate.tex  tower.tex
Execution/: CMakeLists.txt  execution.cpp  execution.h  execution_linux.cpp  execution_linux_old.cpp  testlib.cpp  testlib.h
Influence/: CMakeLists.txt  sample.cpp  tester.cpp
Kamisado/: CMakeLists.txt  GameUI.cpp  GameUI.h  Visualizer.cpp  sample.cpp  tester.cpp
Maxit/: CMakeLists.txt  Depth.cpp  GameUI.cpp  GameUI.h  Greed.cpp  Visualizer.cpp  sample.cpp  tester.cpp
Maxit/checkers/: 13082014.cpp  randomTester.cpp
Tanks/: CMakeLists.txt  GameUI.cpp  GameUI.h  Visualizer.cpp  images.qrc  sample.cpp  tester.cpp
Tanks2/: CMakeLists.txt  GameUI.cpp  GameUI.h  Visualizer.cpp  images.qrc  sample.cpp  tester.cpp
Test/: CMakeLists.txt  battleShipsBadSample.cpp  maxitBadSimple.cpp  tester.cpp
TowerDefense/: CMakeLists.txt  sample.cpp  tester.cpp
Visualizer/: BaseGameUi.cpp  BaseGameUi.h  CMakeLists.txt  LogChooser.cpp  LogChooser.h
XO/: CMakeLists.txt  GameUI.cpp  GameUI.h  Visualizer.cpp  sample.cpp  sample_bad.cpp  tester.cpp
XO4/: CMakeLists.txt  GameUI.cpp  GameUI.h  Visualizer.cpp  center.pas  clever.cpp  first.pas  random.pas  sample.cpp  tester.cpp  Арсений_XOXOv1.1.cpp
projects/: SoftwareBattle.sln
projects/BattleShips.Sample/: BattleShips.Sample.vcxproj  BattleShips.Sample.vcxproj.filters
projects/BattleShips.Tester/: BattleShips.Tester.vcxproj  BattleShips.Tester.vcxproj.filters
projects/BattleShips.Visualizer/: BattleShips.Visualizer.vcxproj  BattleShips.Visualizer.vcxproj.filters
projects/Execution/: Execution.vcxproj  Execution.vcxproj.filters
projects/Kamisado.Sample/: Kamisado.Sample.vcxproj  Kamisado.Sample.vcxproj.filters
projects/Kamisado.Tester/: Kamisado.Tester.vcxproj  Kamisado.Tester.vcxproj.filters
projects/Kamisado.Visualizer/: Kamisado.Visualizer.vcxproj  Kamisado.Visualizer.vcxproj.filters
projects/Maxit.Sample/: Maxit.Sample.vcxproj  Maxit.Sample.vcxproj.filters
projects/Maxit.Tester/: Maxit.Tester.vcxproj  Maxit.Tester.vcxproj.filters
projects/Maxit.Visualizer/: Maxit.Visualizer.vcxproj  Maxit.Visualizer.vcxproj.filters
projects/Tanks.Sample/: Tanks.Sample.vcxproj  Tanks.Sample.vcxproj.filters
projects/Tanks.Tester/: Tanks.Tester.vcxproj  Tanks.Tester.vcxproj.filters
projects/Tanks.Visualizer/: Tanks.Visualizer.vcxproj  Tanks.Visualizer.vcxproj.filters
projects/Tanks2.Sample/: Tanks2.Sample.vcxproj  Tanks2.Sample.vcxproj.filters
projects/Tanks2.Tester/: Tanks2.Tester.vcxproj  Tanks2.Tester.vcxproj.filters
projects/Tanks2.Visualizer/: Tanks2.Visualizer.vcxproj  Tanks2.Visualizer.vcxproj.filters
projects/Visualizer/: Visualizer.vcxproj  Visualizer.vcxproj.filters
projects/XO.Sample/: XO.Sample.vcxproj  XO.Sample.vcxproj.filters
projects/XO.Tester/: XO.Tester.vcxproj  XO.Tester.vcxproj.filters
projects/XO.Visualizer/: XO.Visualizer.vcxproj  XO.Visualizer.vcxproj.filters
projects/XO4.Sample/: XO4.Sample.vcxproj  XO4.Sample.vcxproj.filters
projects/XO4.Tester/: XO4.Tester.vcxproj  XO4.Tester.vcxproj.filters
projects/XO4.Visualizer/: XO4.Visualizer.vcxproj  XO4.Visualizer.vcxproj.filters
site/: .htaccess  APattachments.php  APcheckers.php  APduels.php  APfaq.php  APgame.php  APimageUpload.php  APimageViewer.php  APnews.php  AProunds.php  APtournament.php  APuserManagement.php  adminPanel.php  bottom.php  cl.bat  clChecker.bat  comments.php  dashboard.php  downloadAttachment.php  duels.php  faq.php  fpc.bat  game.php  gcc.sh  gccChecker.sh  getChecker.php  getCompileLog.php  getLog.php  getSource.php  imageUploader.php  imageViewer.php  index.php  install.php  installCreateDB.php  jqueryAttachment.php  jqueryChecker.php  jqueryDeleteImage.php  jqueryFaq.php  jqueryFaqSendQuestion.php  jqueryGame.php  (+43 more)
site/admin/: .htaccess  game.php  games.php  news.php  round.php  tournament.php  tournaments.php  users.php
site/ckeditor/: config.js
site/css/: adminPanel.css  mySiteCSS.css
site/js/: procedures.js  visualRound.js
site/procedures/: round.php  tournaments.php  users.php
site/visual/: BattleShips.js  Maxit.js  Tanks2.js  TowerDefense.js  XO.js  kamisado.js  tanks.js
