cmake_minimum_required(VERSION 2.6)
project(AIBATTLE)
add_subdirectory(Execution)
add_subdirectory(Visualizer)
add_subdirectory(BattleShips)
add_subdirectory(Kamisado)
add_subdirectory(Maxit)
add_subdirectory(Tanks)
add_subdirectory(Tanks2)
add_subdirectory(XO)
add_subdirectory(Influence)
add_subdirectory(XO4)
