cmake_minimum_required(VERSION 2.8.11)
set(CMAKE_AUTOMOC ON)
find_package(Qt4)
include(${QT_USE_FILE}) 
include_directories(${AIBATTLE_SOURCE_DIR}/Execution)
include_directories(${AIBATTLE_SOURCE_DIR}/Visualizer)
link_directories(${AIBATTLE_BINARY_DIR}/Execution)
link_directories(${AIBATTLE_BINARY_DIR}/Visualizer)
add_executable(BattleShipsTester tester.cpp)
add_executable(BattleShipsSample sample.cpp)
add_executable(BattleShipsVisualizer Visualizer.cpp GameUI.cpp)
target_link_libraries(BattleShipsTester execution)
target_link_libraries(BattleShipsVisualizer visualizer ${QT_LIBRARIES})
