cmake_minimum_required(VERSION 2.6)
set(CMAKE_AUTOMOC ON)
include_directories(${AIBATTLE_SOURCE_DIR}/Execution)
link_directories(${AIBATTLE_BINARY_DIR}/Execution)
add_executable(InfluenceTester tester.cpp)
target_link_libraries(InfluenceTester execution)
set_property(TARGET InfluenceTester PROPERTY CXX_STANDARD 11)
add_executable(InfluenceSample sample.cpp)
set_property(TARGET InfluenceSample PROPERTY CXX_STANDARD 11)
