cmake_minimum_required(VERSION 2.8.7)
set(CMAKE_AUTOMOC ON)
find_package(Qt4)
include(${QT_USE_FILE}) 
include_directories(${AIBATTLE_SOURCE_DIR}/Visualizer)
link_directories(${AIBATTLE_BINARY_DIR}/Visualizer)
include_directories(${AIBATTLE_SOURCE_DIR}/Execution)
link_directories(${AIBATTLE_BINARY_DIR}/Execution)
add_executable(KamisadoTester tester.cpp)
add_executable(KamisadoSample sample.cpp)
add_executable(KamisadoVisualizer Visualizer.cpp GameUI.cpp)
target_link_libraries(KamisadoTester execution)
target_link_libraries(KamisadoVisualizer visualizer ${QT_LIBRARIES})
