include_directories(${AIBATTLE_SOURCE_DIR}/Execution)
link_directories(${AIBATTLE_BINARY_DIR}/Execution)
add_executable(MaxitTester tester.cpp)
add_executable(MaxitSample sample.cpp)
add_executable(MaxitDepth Depth.cpp)
add_executable(MaxitGreed Greed.cpp)
target_link_libraries(MaxitTester execution)
