cmake_minimum_required(VERSION 2.8.11)
set(CMAKE_AUTOMOC ON)
find_package(Qt4)
include(${QT_USE_FILE}) 
include_directories(${AIBATTLE_SOURCE_DIR}/Visualizer)
link_directories(${AIBATTLE_BINARY_DIR}/Visualizer)
include_directories(${AIBATTLE_SOURCE_DIR}/Execution)
link_directories(${AIBATTLE_BINARY_DIR}/Execution)
add_executable(MaxitTester tester.cpp)
add_executable(MaxitSample sample.cpp)
add_executable(MaxitVisualizer Visualizer.cpp GameUI.cpp)
add_executable(MaxitDepth Depth.cpp)
add_executable(MaxitGreed Greed.cpp)
target_link_libraries(MaxitTester execution)
target_link_libraries(MaxitVisualizer visualizer ${QT_LIBRARIES})
