cmake_minimum_required(VERSION 2.8.11)
set(CMAKE_AUTOMOC ON)
find_package(Qt4)
include(${QT_USE_FILE}) 
include_directories(${AIBATTLE_SOURCE_DIR}/Visualizer)
link_directories(${AIBATTLE_BINARY_DIR}/Visualizer)
include_directories(${AIBATTLE_SOURCE_DIR}/Execution)
link_directories(${AIBATTLE_BINARY_DIR}/Execution)
add_executable(TanksTester tester.cpp)
add_executable(TanksSample sample.cpp)
qt4_add_resources(TanksVisualizer_rcc images.qrc)
add_executable(TanksVisualizer Visualizer.cpp GameUI.cpp ${TanksVisualizer_rcc})
target_link_libraries(TanksTester execution)
target_link_libraries(TanksVisualizer visualizer ${QT_LIBRARIES})
