cmake_minimum_required(VERSION 2.8.7)
set(CMAKE_AUTOMOC ON)
find_package(Qt4)
include(${QT_USE_FILE}) 
include_directories(${AIBATTLE_SOURCE_DIR}/Visualizer)
link_directories(${AIBATTLE_BINARY_DIR}/Visualizer)
include_directories(${AIBATTLE_SOURCE_DIR}/Execution)
link_directories(${AIBATTLE_BINARY_DIR}/Execution)
qt4_add_resources(Tanks2Visualizer_rcc images.qrc)
add_executable(Tanks2Visualizer Visualizer.cpp GameUI.cpp ${Tanks2Visualizer_rcc})
add_executable(Tanks2Tester tester.cpp)
add_executable(Tanks2Sample sample.cpp)
target_link_libraries(Tanks2Tester execution)
target_link_libraries(Tanks2Visualizer visualizer ${QT_LIBRARIES})
