cmake_minimum_required(VERSION 2.8.7)
include_directories(${AIBATTLE_SOURCE_DIR}/Execution)
link_directories(${AIBATTLE_BINARY_DIR}/Execution)
add_executable(TowerTester tester.cpp)
add_executable(TowerSample sample.cpp)
set_property(TARGET TowerTester PROPERTY CXX_STANDARD 11)
target_link_libraries(TowerTester execution)
