cmake_minimum_required(VERSION 2.8.7)
set(CMAKE_AUTOMOC ON)
find_package(Qt4)
include(${QT_USE_FILE})
include_directories(${AIBATTLE_SOURCE_DIR}/Visualizer)
link_directories(${AIBATTLE_BINARY_DIR}/Visualizer)
include_directories(${AIBATTLE_SOURCE_DIR}/Execution)
link_directories(${AIBATTLE_BINARY_DIR}/Execution)
add_executable(XOTester tester.cpp)
add_executable(XOSample sample.cpp)
add_executable(XOVisualizer Visualizer.cpp GameUI.cpp)
target_link_libraries(XOTester execution)
target_link_libraries(XOVisualizer visualizer ${QT_LIBRARIES})
