cmake_minimum_required(VERSION 2.8.11)
set(CMAKE_AUTOMOC ON)
find_package(Qt4)
include(${QT_USE_FILE}) 
include_directories(${AIBATTLE_SOURCE_DIR}/Visualizer)
link_directories(${AIBATTLE_BINARY_DIR}/Visualizer)
include_directories(${AIBATTLE_SOURCE_DIR}/Execution)
link_directories(${AIBATTLE_BINARY_DIR}/Execution)
add_executable(XO4Tester tester.cpp)
add_executable(XO4Sample sample.cpp)
add_executable(XO4Clever clever.cpp)
add_executable(XO4Visualizer Visualizer.cpp GameUI.cpp)
target_link_libraries(XO4Tester execution)
target_link_libraries(XO4Visualizer visualizer ${QT_LIBRARIES})
